--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,15 @@
 
 # Menu that will appear in the fixed position navbar.
 navmenu:
-  Archives: /archives
-  Tags: /tags
-  Categories: /categories
+  - name: Archives
+    url: /archives
+    fa-icon: ~
+  - name: Tags
+    url: /tags
+    fa-icon: ~
+  - name: Categories
+    url: /categories
+    fa-icon: ~
 
 
 # The CSS files to load in the header.
