--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,22 @@ rcss:
 
 
 
-technoflies:
+technogrid:
+  maxParticles: 20
+  particleSize:
+    min: 40
+    max: 80
+  particleDistance:
+    min: 10
+    max: 20
+  particleSpeed:
+    min: 50
+    max: 100
+  particleLife:
+    min: 15
+    max: 30
+  particlesAttract: false
+  particlesAxisAligned: true
   boxSize: 30
   boxSpacing: 1
   boxColor:
